# fastgrep-rs

./: AGENTS.md  CLAUDE.md  Cargo.toml
src/: main.rs  output.rs  search.rs  size.rs
tests/: cli.rs
