[package]
name = "fastgrep-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anstream = "1.0.0"
anstyle = "1.0.14"
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
ignore = "0.4.26"
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
terminal_size = "0.4.4"
walkdir = "2.5.0"
