[package]
name = "fastgrep-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anstream = "1.0.0"
anstyle = "1.0.14"
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
ignore = "0.4.26"
rayon = "1.12.0"
regex = "1.12.4"
terminal_size = "0.4.4"

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
tempfile = "3.27.0"
